...

const styles = StyleSheet.create({
  placeholder: {
    backgroundColor: palette.bgElevated,
  },
  image: {
    width: '100%',
    height: '100%',
  },
});

